src/test/deca/codegen/valid/sansObjet/ifthenelseSimple.deca
/* Description:
    Tester un ifthenelse simple

    Historique:
      cree le 16/01/2020
    Sortie attendu:
    x = 1voila

*/

{
	float x;
	x = 1;
	if(x>=0 && x<=5){
		print("x = 1");
	} else{ 
		x = 1;
	}
	x = 0;
	if(x == 0){
		print("voila");
	}
}
